--- a/Health_Man_Sys_FrontEnd/wwwroot/index.html
+++ b/Health_Man_Sys_FrontEnd/wwwroot/index.html
@@ -7,6 +7,7 @@
     <title>Health_Man_Sys_FrontEnd</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="Health_Man_Sys_FrontEnd.styles.css" rel="stylesheet" />
